--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -104,25 +104,25 @@
                     <div class="card-body card-block">
 
                         <ul id="cv-list">
-                            <li class="row cvinfo-ele-able">
-                                <div class="col-lg-2">
-                                    <img src="images/avata.png" style="width: 120px">
-                                </div>
-                                <div class="col-lg-8">
-                                    <div style="font-size: 28px">
-                                        <strong>Nguyễn Duy Hưng</strong>
-                                    </div>
-                                    <div>
-                                        Java
-                                    </div>
-                                    <div>
-                                        Hà Nội
-                                    </div>
-                                </div>
-                                <div class="col-lg-2">
-                                    30/03/2019
-                                </div>
-                            </li>
+                            <!--<li class="row cvinfo-ele-able">-->
+                                <!--<div class="col-lg-2">-->
+                                    <!--<img src="images/avata.png" style="width: 120px">-->
+                                <!--</div>-->
+                                <!--<div class="col-lg-8">-->
+                                    <!--<div style="font-size: 28px">-->
+                                        <!--<strong>Nguyễn Duy Hưng</strong>-->
+                                    <!--</div>-->
+                                    <!--<div>-->
+                                        <!--Java-->
+                                    <!--</div>-->
+                                    <!--<div>-->
+                                        <!--Hà Nội-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="col-lg-2">-->
+                                    <!--30/03/2019-->
+                                <!--</div>-->
+                            <!--</li>-->
                         </ul>
 
                     </div>
