--- a/src/main/resources/static/AddCV.html
+++ b/src/main/resources/static/AddCV.html
@@ -60,7 +60,9 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <span>Vị Trí</span>
-                            <span><input id="edit-vitri"  class="form-control" ></span>
+                            <select id="select-vitri"  name="framework[]" multiple class="form-control">
+
+                            </select>
                         </div>
                     </div>
                     <div class="row">
@@ -80,11 +82,13 @@
                             <span>Đơn Vị Up</span>
                             <input id="edit-donviup"  class="form-control" disabled>
                         </div>
-                        <p class="upload-container">
-                            <span>fileCV</span>
-                        <form id="singleUploadForm1" style="display: inline-block" name="singleUploadForm1">
-                            <input type="file" name="file" class="file-input" required/>
+                        <div class="upload-container col-md-6 col-sm-12">
+                            <span>FileCV</span>
+                        <form id="singleUploadForm1" name="singleUploadForm1">
+                            <input type="file" name="file" class="file-input form-control" required/>
                         </form>
+                        </div>
+                    </div>
                         <div class="upload-response">
                             <div id="singleFileUploadError1"></div>
                             <div id="singleFileUploadSuccess1"></div>
@@ -111,7 +115,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
 <script src="http://www.w3schools.com/lib/w3data.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
 <script src="js/general.js"></script>
 <script src="js/addCV.js"></script>
 <script>
