--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -70,7 +70,7 @@
                                     <p>
                                     <div style="text-align: left">Địa điểm</div>
                                     <span>
-                                        <select class="form-control" id="select-diadiem">
+                                        <select class="form-control" id="select-diadiem" name="framework[]" multiple >
 
                                         </select>
                                     </span>
@@ -78,7 +78,7 @@
                                     <p>
                                     <div style="text-align: left">Đơn vị</div>
                                     <span>
-                                        <select class="form-control" id="select-donvi">
+                                        <select class="form-control" id="select-donvi" ame="framework[]" multiple>
 
                                         </select>
                                     </span>
@@ -132,7 +132,7 @@
         </main>
     </div>
 </div>
-
+<style>.dropdown-toggle::after{display: none}</style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
