--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -132,7 +132,87 @@
         </main>
     </div>
 </div>
-<style>.dropdown-toggle::after{display: none}</style>
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog" style="max-width: 800px;width: auto" >
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Modal Header</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="panel panel-default" style="border: solid 1px #cddbd1;">
+                    <!--  ================= Personal information =================== -->
+                    <!--  ================================================ -->
+                    <div class="panel-heading text-center">Thông tin cá nhân</div>
+                    <div class="panel-body">
+                        <div class="row form-group">
+                            <div class="col-xs-6 col-md-2">
+                                <!--<div class="left-profile image-profile text-center"-->
+                                <!--ng-model="vm.file"-->
+                                <!--ngf-select="vm.selectFiles($files, $invalidFiles)"-->
+                                <!--accept="*image/*"-->
+                                <!--ngf-max-size="10MB">-->
+                                <!--<p ng-if="vm.file.length <= 0">image here</p>-->
+                                <!--<img ngf-src="vm.file" ngf-accept="'image/*'" style="width: 100%; height:100%;">-->
+                                <!--</div>-->
+                                <div class="left-profile image-profile text-center margin-top-10">
+                                    <!----><p ng-if="vm.student.candidateProfile==null">image here</p><!---->
+                                    <!-- <img  ngf-src="vm.file" ngf-accept="'image/*'" style="width: 100%; height:100%"> -->
+                                    <img height="160" width="130" title="" alt="">
+                                </div>
+                            </div>
+                            <div class="col-md-10">
+                                <div class="row form-group">
+                                    <div class="col-md-6">
+                                        <label>Họ tên: </label>
+                                        <input id="hoten" type="text" class="form-control">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label >Số điện thoại:</label>
+                                        <input id="sodt" type="text" class="form-control">                                    </div>
+                                </div>
+                                <div class="row form-group">
+                                    <div class="col-md-6">
+                                        <label>Đơn vị up: </label>
+                                        <input id="donvi" type="text" class="form-control">                                    </div>
+                                    <div class="col-md-6">
+                                        <label>Địa điểm: </label>
+                                        <input id="diadiem" type="text" class="form-control">                                    </div>
+                                </div>
+                                <div class="row form-group">
+
+                                    <div class="col-md-6">
+                                        <label >Vị trí: </label>
+                                        <select id="vitri" name="framework[]" multiple class="form-control" >
+                                            option value="Test">Test</option>
+                                            <option value="Prof">Prof</option>
+                                            <option value="Live">Live</option>
+                                            <option value="Off">Off</option>
+                                            <option value="On" selected>On</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <label >File CV: </label>
+                                        <input id="file" type="text" class="form-control">                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Lưu</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+<style>.dropdown-toggle::after{display: none} .form-control{border-radius: unset; box-shadow: none} label{font-weight: unset}</style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
