--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -187,11 +187,11 @@
                                     <div class="col-md-6">
                                         <label >Vị trí: </label>
                                         <select id="vitri" name="framework[]" multiple class="form-control" >
-                                            option value="Test">Test</option>
-                                            <option value="Prof">Prof</option>
-                                            <option value="Live">Live</option>
-                                            <option value="Off">Off</option>
-                                            <option value="On" selected>On</option>
+<!--                                            option value="Test">Test</option>-->
+<!--                                            <option value="Prof">Prof</option>-->
+<!--                                            <option value="Live">Live</option>-->
+<!--                                            <option value="Off">Off</option>-->
+<!--                                            <option value="On">On</option>-->
                                         </select>
                                     </div>
 
