fix multiselect view

--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -184,11 +184,11 @@
                                 </div>
                                 <div class="row form-group">
 
-                                    <div class="col-md-6">
+                                    <div  id="div-vitri" class="col-md-6">
                                         <label >Vị trí: </label>
-                                        <select id="vitri" name="framework[]" multiple class="form-control" >
-<!--                                            option value="Test">Test</option>-->
-<!--                                            <option value="Prof">Prof</option>-->
+                                        <!--<select id="vitri" name="framework[]" multiple="multiple" class="form-control" >-->
+                                            <!--option value="Test">Test</option>-->
+                                            <!--<option value="Prof">Prof</option>-->
 <!--                                            <option value="Live">Live</option>-->
 <!--                                            <option value="Off">Off</option>-->
 <!--                                            <option value="On">On</option>-->
