--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -209,6 +209,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="editCV" data-dismiss="modal">Lưu</button>
+                <button type="button" class="btn btn-danger" id="deleteCV" data-dismiss="modal">Xóa</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
