--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -198,7 +198,9 @@
 
                                     <div class="col-md-6">
                                         <label class="col-md-12" style="padding-left: 0">File CV: </label>
-                                        <input style="padding: 0" id="file" type="file">
+                                        <form id="singleUploadForm1" name="singleUploadForm1">
+                                            <input type="file" name="file" class="file-input form-control" required/>
+                                        </form>
                                         <div class="fileCV mt-1" style="color: #0e6498">sss</div>
                                     </div>
                                 </div>
