--- a/src/main/resources/static/AddAccount.html
+++ b/src/main/resources/static/AddAccount.html
@@ -105,8 +105,17 @@
 
             </div>
         </div>
-    </main>
+
 <!--    END CONTENT-->
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-header text-center "><strong>Acount</strong></div>
+                <div class="card-body card-block">
+                    <div class="col-lg-6">
+                    </div>
+
+                </div>
+            </div>
 </div>
 
 
