--- a/src/main/resources/static/Menu.html
+++ b/src/main/resources/static/Menu.html
@@ -21,7 +21,7 @@
                 <li class="menu-item">
                     <a href="AddCV.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-folder-plus"></i>    Thêm CV</a>
                 </li>
-                <h3 class="menu-title">Acount</h3><!-- /.menu-title -->
+                <h3 class="menu-title">Account</h3><!-- /.menu-title -->
                 <li class="menu-item">
                     <a href="AddAccount.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-plus-circle"></i>    Thêm Acount</a>
                 </li>
