--- a/src/main/resources/static/AddAccount.html
+++ b/src/main/resources/static/AddAccount.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Add Account</title>
+    <title>Add Acccount</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bootstrap-4.3.1-dist/css/bootstrap.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         <div class="col-sm-4">
             <div class="page-header float-left">
                 <div class="page-title">
-                    <h1>Acount</h1>
+                    <h1>Account</h1>
                 </div>
             </div>
         </div>
@@ -39,7 +39,7 @@
             <div class="page-header float-right">
                 <div class="page-title">
                     <ol class="breadcrumb text-right">
-                        <li class="active">Thêm Acount</li>
+                        <li class="active">Thêm Account</li>
                     </ol>
                 </div>
             </div>
@@ -109,15 +109,112 @@
 <!--    END CONTENT-->
         <div class="col-lg-12">
             <div class="card">
-                <div class="card-header text-center "><strong>Acount</strong></div>
+                <div class="card-header text-center "><strong>Account</strong></div>
                 <div class="card-body card-block">
                     <div class="col-lg-6">
                     </div>
-
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>User Name</th>
+                            <th>Họ tên</th>
+                            <th>Số điện thoại</th>
+                            <th>Đơn vị</th>
+                            <th>Quyền</th>
+                        </tr>
+                        </thead>
+                        <tbody id="listAccount">
+                        </tbody>
+                    </table>
                 </div>
             </div>
 </div>
 
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog" style="max-width: 800px;width: auto" >
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Modal Header</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="panel panel-default" style="border: solid 1px #cddbd1;">
+                            <!--  ================= Personal information =================== -->
+                            <!--  ================================================ -->
+                            <div class="panel-heading text-center">Thông tin cá nhân</div>
+                            <div class="panel-body">
+                                <div class="row form-group">
+                                    <div class="col-xs-6 col-md-2">
+                                        <!--<div class="left-profile image-profile text-center"-->
+                                        <!--ng-model="vm.file"-->
+                                        <!--ngf-select="vm.selectFiles($files, $invalidFiles)"-->
+                                        <!--accept="*image/*"-->
+                                        <!--ngf-max-size="10MB">-->
+                                        <!--<p ng-if="vm.file.length <= 0">image here</p>-->
+                                        <!--<img ngf-src="vm.file" ngf-accept="'image/*'" style="width: 100%; height:100%;">-->
+                                        <!--</div>-->
+                                        <div class="left-profile image-profile text-center margin-top-10">
+                                            <!----><p ng-if="vm.student.candidateProfile==null">image here</p><!---->
+                                            <!-- <img  ngf-src="vm.file" ngf-accept="'image/*'" style="width: 100%; height:100%"> -->
+                                            <img height="160" width="130" title="" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-10">
+                                        <div class="row form-group">
+                                            <div class="col-md-6">
+                                                <label>Họ tên: </label>
+                                                <input id="hoten" type="text" class="form-control">
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label >Số điện thoại:</label>
+                                                <input id="sodt" type="text" class="form-control">                                    </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div class="col-md-6">
+                                                <label>Đơn vị up: </label>
+                                                <select id="donvi" class="form-control">
+                                                </select>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <label>Địa điểm: </label>
+                                                <select id="diadiem" class="form-control"></select>                                    </div>
+                                        </div>
+                                        <div class="row form-group">
+                                            <div  id="div-vitri" class="col-md-6">
+                                                <label >Vị trí: </label>
+                                                <!--<select id="vitri" name="framework[]" multiple="multiple" class="form-control" >-->
+                                                <!--option value="Test">Test</option>-->
+                                                <!--<option value="Prof">Prof</option>-->
+                                                <!--                                            <option value="Live">Live</option>-->
+                                                <!--                                            <option value="Off">Off</option>-->
+                                                <!--                                            <option value="On">On</option>-->
+                                                </select>
+                                            </div>
+
+                                            <div class="col-md-6">
+                                                <label class="col-md-12" style="padding-left: 0">File CV: </label>
+                                                <form id="singleUploadForm1" name="singleUploadForm1">
+                                                    <input type="file" name="file" class="file-input form-control" required/>
+                                                </form>
+                                                <div class="fileCV mt-1" style="color: #0e6498">sss</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" id="editCV" data-dismiss="modal">Lưu</button>
+                        <button type="button" class="btn btn-danger" id="deleteCV" data-dismiss="modal">Xóa</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
