--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -103,7 +103,7 @@
                     <div class="card-header text-center "><strong>Danh sách ứng viên</strong></div>
                     <div class="card-body card-block">
 
-                        <ul id="cv-list">
+                        <ul id="cv-list" >
                             <!--<li class="row cvinfo-ele-able">-->
                                 <!--<div class="col-lg-2">-->
                                     <!--<img src="images/avata.png" style="width: 120px">-->
@@ -218,7 +218,7 @@
 
     </div>
 </div>
-<style>.dropdown-toggle::after{display: none} .form-control{border-radius: unset; box-shadow: none} label{font-weight: unset}</style>
+<style>.dropdown-toggle::after{display: none} .form-control{border-radius: unset; box-shadow: none} label{font-weight: unset} .cvinfo-ele-able:hover{ background-color: #f1f1f1}</style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="asset/js/jquery-toaster.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
