--- a/src/main/resources/static/Menu.html
+++ b/src/main/resources/static/Menu.html
@@ -5,14 +5,14 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-menu" aria-controls="main-menu" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="./">VIETTEL POST</a>
-            <a class="navbar-brand hidden" href="./">VIETTEL</a>
+            <a class="navbar-brand" href="#">VIETTEL POST</a>
+            <a class="navbar-brand hidden" href="#">VIETTEL</a>
         </div>
 
         <div id="main-menu" class="main-menu collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                    <a href="#"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
                 </li>
                 <h3 class="menu-title">Quản lý CV</h3><!-- /.menu-title -->
                 <li class="menu-item">
