--- a/src/main/resources/static/AddAccount.html
+++ b/src/main/resources/static/AddAccount.html
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" id="editAccount" data-dismiss="modal">Sửa thông tin</button>
+                                <button type="button" class="btn btn-primary" id="editAccount">Sửa thông tin</button>
                             </div>
                         </div>
 
@@ -188,13 +188,13 @@
                                     <div class="col-md-12">
                                         <div class="row form-group">
                                             <div class="col-md-12">
-                                                <label>Password: </label>
+                                                <label>New Password: </label>
                                                 <input id="newpass" type="password" class="form-control">
                                             </div>
                                         </div>
                                         <div class="row form-group">
                                             <div class="col-md-12">
-                                                <label >Re Password:</label>
+                                                <label >Renew Password:</label>
                                                 <input id="renew" type="password" class="form-control">
                                             </div>
                                         </div>
@@ -202,7 +202,7 @@
                                     </div>
                                 </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" id="changePass" data-dismiss="modal">Đổi mật khẩu</button>
+                                <button type="button" class="btn btn-primary" id="changePass">Đổi mật khẩu</button>
                             </div>
                         </div>
 
