--- a/src/main/resources/static/Menu.html
+++ b/src/main/resources/static/Menu.html
@@ -11,9 +11,6 @@
 
         <div id="main-menu" class="main-menu collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active">
-                    <a href="#"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
-                </li>
                 <h3 class="menu-title">Quản lý CV</h3><!-- /.menu-title -->
                 <li class="menu-item">
                     <a href="Manage.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-id-card"></i>        Danh sách CV</a>
@@ -23,7 +20,7 @@
                 </li>
                 <h3 class="menu-title">Account</h3><!-- /.menu-title -->
                 <li class="menu-item">
-                    <a href="AddAccount.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-plus-circle"></i>    Thêm Acount</a>
+                    <a href="AddAccount.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-plus-circle"></i>    Quản lý Account</a>
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
