--- a/src/main/resources/static/AddAccount.html
+++ b/src/main/resources/static/AddAccount.html
@@ -50,7 +50,7 @@
         <div class="card">
             <div class="card-header text-center "><strong>Thêm Acount</strong></div>
             <div class="card-body card-block">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
                             <span>UserName</span>
@@ -58,14 +58,14 @@
                         </div>
 
                         <div class="col-md-6 col-sm-12">
-                            <span>Pass</span>
+                            <span>Password</span>
                             <span><input id="edit-pass" class="form-control"></span>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
-                            <span>HoTen</span>
+                            <span>Họ Tên</span>
                             <span><input id="edit-hoten" class="form-control"></span>
                         </div>
                         <div class="col-md-6 col-sm-12">
@@ -77,11 +77,11 @@
 
                     <div class="row">
                         <div class="col-md-6 col-sm-12">
-                            <span>Số Điện Thoai</span>
+                            <span>Số Điện Thoại</span>
                             <span><input id="edit-soDT" class="form-control"></span>
                         </div>
                         <div class="col-md-6 col-sm-12">
-                        <span>Phân quyền</span>
+                        <span>Phân Quyền</span>
                             <select id="select-status" class="form-control">
                                 <option>admin</option>
                                 <option>user</option>
@@ -92,16 +92,6 @@
                         <button id="btn-addAccount" class=" btn btn-primary mt-3">Thêm Account</button>
                 </div>
 
-
-                <div class="col-lg-6">
-                    <p>
-                        <span>Đơn vị</span>
-                        <input id="edit-addDonVi" class="form-control">
-                    </p>
-                    <p>
-                        <button id="btn-addDonVi" class="btn btn-primary">Thêm đơn vị</button>
-                    </p>
-                </div>
 
             </div>
         </div>
