--- a/src/main/resources/static/AddCV.html
+++ b/src/main/resources/static/AddCV.html
@@ -85,7 +85,7 @@
                             <input id="edit-donviup"  class="form-control" disabled>
                         </div>
                         <div class="upload-container col-md-6 col-sm-12">
-                            <span>FileCV</span>
+                            <span>FileCV (.pdf)</span>
                         <form id="singleUploadForm1" name="singleUploadForm1">
                             <input type="file" name="file" class="file-input form-control" required/>
                         </form>
@@ -111,7 +111,7 @@
 </div>
 
 
-
+<style>.dropdown-toggle::after{display: none} .form-control{border-radius: unset; box-shadow: none} label{font-weight: unset} </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
