--- a/src/main/resources/static/Manage.html
+++ b/src/main/resources/static/Manage.html
@@ -197,7 +197,7 @@
                                     </div>
 
                                     <div class="col-md-6">
-                                        <label class="col-md-12" style="padding-left: 0">File CV: </label>
+                                        <label class="col-md-12" style="padding-left: 0">File CV (.pdf): </label>
                                         <form id="singleUploadForm1" name="singleUploadForm1">
                                             <input type="file" name="file" class="file-input form-control" required/>
                                         </form>
