--- a/src/main/resources/static/Menu.html
+++ b/src/main/resources/static/Menu.html
@@ -20,7 +20,10 @@
                 </li>
                 <h3 class="menu-title">Account</h3><!-- /.menu-title -->
                 <li class="menu-item">
-                    <a href="AddAccount.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-plus-circle"></i>    Quản lý Account</a>
+                    <a href="AddAccount.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fas fa-users"></i>   Quản lý Account</a>
+                </li>
+                <li class="menu-item">
+                    <a href="Position.html" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false"> <i class="fab fa-angular"></i>    Quản lý vị trí</a>
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
