--- a/src/main/resources/static/Head.html
+++ b/src/main/resources/static/Head.html
@@ -2,9 +2,9 @@
 
     <div class="header-menu">
 
-        <div class="col-sm-7">
-            <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
-        </div>
+<!--        <div class="col-sm-7">-->
+<!--            <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>-->
+<!--        </div>-->
 
         <div class="col-sm-5 float-right">
             <div class="user-area dropdown float-right">
